--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "cors": "^2.8.1",
+    "dotenv": "^8.2.0",
     "express": "^4.16.1",
-    "pug": "^3.0.0",
+    "express-session": "^1.15.0",
     "passport": "^0.3.2",
-    "express-session": "^1.15.0"
+    "pug": "^3.0.0"
   },
   "engines": {
     "node": "^12.0.0"
